# pubby

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md
docs/agents/: 04-PLAN.md  05-FOLLOW-UP.md
docs/agents/00-BOOTSTRAP/: 06-REFINED-FOLLOW-UPS.md
docs/agents/01-BOOTSTRAP/: 01-INITIAL.md  02-RESEARCH.md  03-PRE-PLAN.md  04-PLAN.md  05-FOLLOW-UP.md
docs/agents/02-FRAMEWORK-ADAPTERS/: 01-PLAN.md  02-FOLLOW-UP.md
docs/agents/03-README/: 01-PLAN.md  02-FOLLOW-UP.md
src/python/mypub/: _exceptions.py  _model.py
src/python/mypub/crypto/: _keys.py
src/python/mypub/handlers/: _discovery.py  _handler.py  _inbox.py  _outbox.py
src/python/mypub/render/: __init__.py  _renderer.py
src/python/mypub/server/adapters/: flask.py
src/python/mypub/storage/: _base.py
src/python/mypub/templates/: interactions.html
src/python/pubby/: __init__.py  _model.py
src/python/pubby/crypto/: __init__.py  _signatures.py
src/python/pubby/handlers/: _discovery.py  _handler.py  _inbox.py  _outbox.py
src/python/pubby/render/: _renderer.py
src/python/pubby/server/adapters/: fastapi.py  flask.py  tornado.py
src/python/pubby/storage/: __init__.py  _base.py
src/python/pubby/templates/: interaction.html
tests/: conftest.py  test_actor_update.py  test_adapter_structure.py  test_adapters.py  test_crypto.py  test_db_storage.py  test_discovery.py  test_file_storage.py  test_flask_adapter.py  test_inbox.py  test_model.py  test_outbox.py  test_rate_limit.py  test_render_helpers.py  test_renderer.py  test_signatures.py  test_webfinger.py
(+7 files in other folders)
