[project]
name = "pubby"
version = "0.2.1"
description = "A general-purpose library to add ActivityPub federation support to your website"
license = "AGPL-3.0-or-later"
dependencies = [
  "cryptography>=41.0",
  "jinja2",
  "requests",
]
authors = [
  {name = "Fabio Manganiello", email = "fabio@manganiello.tech"},
]

classifiers=[
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 3 - Alpha",
]

readme = "README.md"
requires-python = '>= 3.8'
keywords = ["activitypub", "fediverse", "federation", "mastodon"]

[project.optional-dependencies]
db = ["sqlalchemy"]
fastapi = ["fastapi", "uvicorn"]
flask = ["flask"]
tornado = ["tornado"]
test = ["pytest", "pytest-cov", "sqlalchemy", "flask", "fastapi", "httpx", "tornado"]
dev = ["pre-commit", "black", "flake8"]

[project.urls]
homepage = "https://git.fabiomanganiello.com/pubby"
github = "https://github.com/blacklight/pubby"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src/python"}

[tool.setuptools.package-data]
pubby = ["templates/*.html"]

[tool.setuptools.packages.find]
where = ["src/python"]
include = ["pubby*"]

[tool.bumpversion]
current_version = "0.2.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "src/python/pubby/__init__.py"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"

[tool.pytest.ini_options]
markers = [
    "integration: marks integration tests",
]
